--- a/PDD_MNIST_sample.ipynb
+++ b/PDD_MNIST_sample.ipynb
@@ -2145,75 +2145,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "GERLEXajN50l",
-        "outputId": "06907702-3daf-4165-bf92-dcc3ba83ef0b"
+        "id": "GERLEXajN50l"
       },
       "source": [
         "# train_labels (non-anomaly classes)\n",
-        "position_normal_class = [i for i,j in enumerate(mnist_train.train_labels.tolist()) if not j in ood_classes]\n",
+        "position_normal_class = [i for i,j in enumerate(mnist_train.targets.tolist()) if not j in ood_classes]\n",
         "np.array(position_normal_class)"
       ],
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/torchvision/datasets/mnist.py:65: UserWarning: train_labels has been renamed targets\n",
-            "  warnings.warn(\"train_labels has been renamed targets\")\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([    0,     1,     2, ..., 59997, 59998, 59999])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 27
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "1GZSUmCyM2sj",
-        "outputId": "5465f084-8f89-4d4f-9ec4-d74f2d12abee"
+        "id": "1GZSUmCyM2sj"
       },
       "source": [
-        "mnist_data_normal = mnist_train.train_data[position_normal_class] \n",
-        "mnist_label_normal = mnist_train.train_labels[position_normal_class] \n",
+        "mnist_data_normal = mnist_train.data[position_normal_class] \n",
+        "mnist_label_normal = mnist_train.data[position_normal_class] \n",
         "\n",
         "mnist_data_normal.shape, mnist_label_normal.shape"
       ],
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/torchvision/datasets/mnist.py:75: UserWarning: train_data has been renamed data\n",
-            "  warnings.warn(\"train_data has been renamed data\")\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(torch.Size([53258, 28, 28]), torch.Size([53258]))"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 28
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
