--- a/PDD_MNIST_sample.ipynb
+++ b/PDD_MNIST_sample.ipynb
@@ -1409,8 +1409,7 @@
         "id": "efRH_C0oUPqQ"
       },
       "source": [
-        "#Prototype Data Description\n",
-        "##Inter/Intra-class margin maximization\n"
+        "#Prototype Data Description\n"
       ]
     },
     {
@@ -1420,10 +1419,11 @@
       },
       "source": [
         "##Implementations\n",
-        "* AnoGAN-like Generator/Discriminator - unsupervised pretraining\n",
-        "* Leave-an-anomaly-class-out Training Data\n",
-        "* Within the discriminator feature space\n",
-        "* Inter/Intra-class margins computed by class-prototypes\n"
+        "* Unsupervised pretraining Generator/Discriminator adversarial training\n",
+        "* Leave-one(anomaly)-class-out Training Data\n",
+        "* Visualize the discriminator feature space\n",
+        "* Inter/intra-class margins computed using class-prototypes\n",
+        "* Anomaly score using KDE\n"
       ]
     },
     {
